--- a/src/main/webapp/404.html
+++ b/src/main/webapp/404.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-  <meta name="author" content="Andrew Violette, @aviolette/@chifoodtruckz on twitter"/>
-  <meta name="description"
-        content="Find food trucks on the streets of Chicago by time and location.  Results are updated in real-time throughout the day."/>
-  <title>Chicago Food Truck Finder</title>
-  <link href="/bootstrap/bootstrap.css" rel="stylesheet"/>
-  <link href="/css/main.css?ver=3" rel="stylesheet"/>
-  <script src="script/lib/modernizr-1.7.min.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
+    <meta name="author" content="Andrew Violette, @aviolette/@chifoodtruckz on twitter"/>
+    <meta name="description"
+          content="Find food trucks on the streets of Chicago by time and location.  Results are updated in real-time throughout the day."/>
+    <title>Chicago Food Truck Finder</title>
+    <link href="/bootstrap/bootstrap.css" rel="stylesheet"/>
+    <link href="/css/main.css?ver=3" rel="stylesheet"/>
+    <script src="/script/lib/modernizr-1.7.min.js"></script>
 </head>
 <body>
 <div class="container">
-  <div class="hero-unit">
-    <img src="/img/logo.png">
+    <div class="hero-unit">
+        <img src="/img/logo.png">
 
-    <h1>Not Found</h1>
+        <h1>Not Found</h1>
 
-    <p>Bummer: the page you requested could not be found!</p>
-  </div>
+        <p>Bummer: the page you requested could not be found!</p>
+    </div>
 </div>
 <script src="//s.btstatic.com/tag.js">{
-  site: "zIOrUTR"
+    site: "zIOrUTR"
 }</script>
 <noscript>
-  <iframe src="//s.thebrighttag.com/iframe?c=zIOrUTR" width="1" height="1" frameborder="0"
-          scrolling="no" marginheight="0" marginwidth="0"></iframe>
+    <iframe src="//s.thebrighttag.com/iframe?c=zIOrUTR" width="1" height="1" frameborder="0"
+            scrolling="no" marginheight="0" marginwidth="0"></iframe>
 </noscript>
 </body>
 </html>
