--- a/src/main/webapp/500.html
+++ b/src/main/webapp/500.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Andrew Violette, @aviolette/@chifoodtruckz on twitter"/>
     <meta name="description"
           content="Find food trucks on the streets of Chicago by time and location.  Results are updated in real-time throughout the day."/>
-    <title>Chicago Food Truck Finder</title>
+    <title>Chicago Food Truck Finder - Error!</title>
     <link href="/bootstrap/bootstrap.css" rel="stylesheet"/>
     <link href="/css/main.css?ver=3" rel="stylesheet"/>
     <script src="/script/lib/modernizr-1.7.min.js"></script>
