Changed name of CSS to foodtruckfinder.css

--- a/src/main/webapp/404.html
+++ b/src/main/webapp/404.html
@@ -9,7 +9,7 @@
           content="Find food trucks on the streets of Chicago by time and location.  Results are updated in real-time throughout the day."/>
     <title>Chicago Food Truck Finder</title>
     <link href="/bootstrap/bootstrap.css" rel="stylesheet"/>
-    <link href="/css/main.css?ver=3" rel="stylesheet"/>
+    <link href="/css/foodtruckfinder.css" rel="stylesheet"/>
     <script src="/script/lib/modernizr-1.7.min.js"></script>
 </head>
 <body>
