--- a/src/main/webapp/500.html
+++ b/src/main/webapp/500.html
@@ -10,7 +10,7 @@
     <title>Chicago Food Truck Finder - Error!</title>
     <link href="/bootstrap/bootstrap.css" rel="stylesheet"/>
     <link href="/css/foodtruckfinder.css" rel="stylesheet"/>
-    <script src="/script/lib/modernizr-1.7.min.js"></script>
+    <script src="//storage.googleapis.com/ftf_static/script/modernizr-1.7.min.js"></script>
 </head>
 <body>
 <div class="container">
