--- a/src/main/webapp/404.html
+++ b/src/main/webapp/404.html
@@ -8,7 +8,7 @@
     <meta name="description"
           content="Find food trucks on the streets of Chicago by time and location.  Results are updated in real-time throughout the day."/>
     <title>Chicago Food Truck Finder</title>
-    <link href="/bootstrap/bootstrap.css" rel="stylesheet"/>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/css/foodtruckfinder.css" rel="stylesheet"/>
     <script src="//storage.googleapis.com/ftf_static/script/modernizr-1.7.min.js"></script>
 </head>
